--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0.100"
 bytes = "1.11.0"
 chrono = "0.4.43"
+clap = { version = "4.5.57", features = ["derive", "string"] }
 fast-socks5 = "1.0.0"
 hyper = { version = "1.8.1", features = ["full"] }
 nix = { version = "0.31.1", features = ["socket", "uio", "net"] }
