--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+annotate-snippets = "0.12.11"
 anyhow = "1.0.100"
 bytes = "1.11.0"
 chrono = "0.4.43"
