proxy: enable (m)TLS on the server side
This should reasonably support (m)TLS on the server side now:

- If you set the TLS certificates parameters, TLS is terminated directly
on the proxy.
- If you set the client CA parameters, client certs are verified and we
are in mTLS operations mode.
- If you set none, there's no TLS whatsover.

In the future, we should allow via settings whether people can still
authenticate to the proxy without a client certificate and inject this
information into the ACL.

I think CRLs should not be supported, let's just have short revocation
times, here, problem solved.

Signed-off-by: Ryan Lahfa <ryan.lahfa.ext@numerique.gouv.fr>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ hyper = { version = "1.8.1", features = ["full"] }
 nix = { version = "0.31.1", features = ["socket", "uio", "net"] }
 peekable = { version = "0.4.1", features = ["tokio"] }
 regex = "1.12.2"
+rustls-pemfile = "2.2.0"
+rustls-webpki = "0.103.9"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 serde_with = { version = "3.16.1", features = ["chrono"] }
