state: load or reload client certificate resolver for PKCS#11
By using rustls-pkcs11, we can build a PKCS#11 resolver
(TPM2/HSM/Yubikey/etc.) to resolve client certificates without
specifying URIs.

This resolver does not support targeting a precise URI (except if we
combine it with special PKCS#11 libraries such as OpenSC).

In addition, we do not handle PIN yet, we need a prompt mechanism for
that and caching probably.

Signed-off-by: Ryan Lahfa <ryan.lahfa.ext@numerique.gouv.fr>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+asn1 = "0.23.1"
 bytes = "1.11.0"
 chrono = "0.4.43"
 clap = { version = "4.5.57", features = ["derive", "string"] }
+cryptoki = "0.12.0"
 fast-socks5 = "1.0.0"
 hyper = { version = "1.8.1", features = ["full"] }
 nix = { version = "0.31.1", features = ["socket", "uio", "net"] }
@@ -26,3 +28,4 @@ tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 varlink = { version = "13.0.0", features = ["tokio"] }
 winnow = "0.7.14"
+x509-certificate = "0.25.0"
