--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,11 @@ bytes = "1.11.0"
 chrono = "0.4.43"
 clap = { version = "4.5.57", features = ["derive", "string"] }
 fast-socks5 = "1.0.0"
+http = "1.4.0"
+http-body-util = "0.1.3"
+httparse = "1.10.1"
 hyper = { version = "1.8.1", features = ["full"] }
+hyper-util = { version = "0.1.20", features = ["tokio", "server", "http1"] }
 nix = { version = "0.31.1", features = ["socket", "uio", "net"] }
 peekable = { version = "0.4.1", features = ["tokio"] }
 regex = "1.12.2"
